added alumni news letter / updated contacts page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1157,6 +1157,7 @@ hr {
   -webkit-backface-visibility:hidden; /* Chrome and Safari */
   -moz-backface-visibility:hidden; /* Firefox */
   -ms-backface-visibility:hidden; /* Internet Explorer */
+  backface-visibility:hidden;
   background-size: 70px 120px;
   background-color: #fff;
 }
