--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -7,6 +7,7 @@
       <label for="item1">
         <span class="wrapper">
           <span class="front">
+            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/DMKgTjL.jpg">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
@@ -25,6 +26,7 @@
       <label for="item2">
         <span class="wrapper">
           <span class="front">
+            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/fsUNgMW.jpg">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
@@ -43,6 +45,7 @@
       <label for="item3">
         <span class="wrapper">
           <span class="front">
+            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/62942_1619728219040_1715437_n.jpg?oh=923ebb0efcd4cac7df0542b9411fab2d&oe=5484C600&__gda__=1418750015_a0f9fdb99366cde2a083436b6e23da59">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
@@ -61,6 +64,7 @@
       <label for="item4">
         <span class="wrapper">
           <span class="front">
+            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/b9UMSnB.jpg">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
@@ -79,6 +83,7 @@
       <label for="item5">
         <span class="wrapper">
           <span class="front">
+            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/Xzx4dci.jpg">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
@@ -97,6 +102,7 @@
       <label for="item6">
         <span class="wrapper">
           <span class="front">
+            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/3Sz8haT.jpg">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
@@ -116,15 +122,16 @@
 <h2 style="text-align: center;">Chairs</h2>
 <hr>
 <ul class="flipping-cards">
-<li>
-  <input type="checkbox" id="item7">
-  <label for="item7">
+  <li>
+    <input type="checkbox" id="item7">
+    <label for="item7">
         <span class="wrapper">
           <span class="front">
+            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="https://scontent-b-lga.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/10368270_1479343462318527_673464098958312708_n.jpg?oh=9bfd802f428db8a26469fac28ef3c1ac&oe=5493F37B">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
-            <h2>Writer</h2>
+            <h2>Alumni Rel</h2>
             <h3>Mark Eddy</h3>
             <h2>Email</h2>
             <h3>mxe6552@rit.edu</h3>
@@ -132,17 +139,18 @@
             <h3>Chemical Engineering</h3>
           </span>
         </span>
-  </label>
-</li>
-<li>
-  <input type="checkbox" id="item8">
-  <label for="item8">
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item8">
+    <label for="item8">
         <span class="wrapper">
           <span class="front">
+            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/Tb6p04z.jpg">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
-            <h2>Web Dev</h2>
+            <h2>Web Master</h2>
             <h3>Paul Darragh</h3>
             <h2>Email</h2>
             <h3>pmd6624@rit.edu</h3>
@@ -150,8 +158,103 @@
             <h3>Software Engineering</h3>
           </span>
         </span>
-  </label>
-</li>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item9">
+    <label for="item9">
+        <span class="wrapper">
+          <span class="front">
+            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
+            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/3Sz8haT.jpg">
+          </span>
+          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
+            <h2>Brotherhood</h2>
+            <h3>Hayden Burger</h3>
+            <h2>Email</h2>
+            <h3>heb3544@rit.edu</h3>
+            <h2>Major</h2>
+            <h3>Mechanical Engineering</h3>
+          </span>
+        </span>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item10">
+    <label for="item10">
+        <span class="wrapper">
+          <span class="front">
+            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
+            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/XtJZ0F8.jpg">
+          </span>
+          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
+            <h2>Social</h2>
+            <h3>Rob Bastian</h3>
+            <h2>Email</h2>
+            <h3>rab4068@rit.edu</h3>
+            <h2>Major</h2>
+            <h3>Public Relations</h3>
+          </span>
+        </span>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item11">
+    <label for="item11">
+        <span class="wrapper">
+          <span class="front">
+            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
+            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/C63yyEK.jpg">
+          </span>
+          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
+            <h2>Comnty Srvc</h2>
+            <h3>Jake Hart-Predmore</h3>
+            <h2>Email</h2>
+            <h3>jhh6821@rit.edu</h3>
+            <h2>Major</h2>
+            <h3>Molecular Bioscience</h3>
+          </span>
+        </span>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item12">
+    <label for="item12">
+        <span class="wrapper">
+          <span class="front">
+            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
+            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/strCKwG.jpg">
+          </span>
+          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
+            <h2>Philanthropy</h2>
+            <h3>Brandon Nieves</h3>
+            <h2>Email</h2>
+            <h3>bxn7681@rit.edu</h3>
+            <h2>Major</h2>
+            <h3>Hospitality Management</h3>
+          </span>
+        </span>
+    </label>
+  </li>
+  <li>
+    <input type="checkbox" id="item13">
+    <label for="item13">
+        <span class="wrapper">
+          <span class="front">
+            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
+            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/uy5qFiO.jpg">
+          </span>
+          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
+            <h2>Business Ops</h2>
+            <h3>Brandon Nieves</h3>
+            <h2>Email</h2>
+            <h3>bxn7681@rit.edu</h3>
+            <h2>Major</h2>
+            <h3>Physician Assistant</h3>
+          </span>
+        </span>
+    </label>
+  </li>
 </ul>
 <div style="float: none; clear:both;"> </div>
 
