--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,6 +19,7 @@
         <li><%= link_to "Home", root_path, class: "nav-item" %></li>
         <% if current_user.role == "writer" or current_user.role == "admin" %>
           <li><%= link_to "Posts", posts_path, class: "nav-item" %></li>
+          <li><%= link_to "News-Letters", new_alumni_news_letter_path, class: "nav-item" %></li>
         <% end %>
         <li><%=  link_to "Account", current_user, class: "nav-item"  %></li>
     <% end %>
