made bottom look better

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -18,7 +18,7 @@
           <ul>
             <li><h2 style="color: #00A000">Reaching Out</h2></li>
             <li><%= link_to "Contact Us", contact_us_path, class: "nav-item", :style=>'color:#FFF;' %></li>
-            <li><%= link_to "Alumni News Letters", "#", class: "nav-item", :style=>'color:#FFF;' %></li>
+            <li><%= link_to "Alumni News Letters", alumni_news_letters_path, class: "nav-item", :style=>'color:#FFF;' %></li>
           </ul>
         </li>
         <li>
