--- a/app/views/static_pages/volunteer_opportunities.html.erb
+++ b/app/views/static_pages/volunteer_opportunities.html.erb
@@ -1,15 +1,15 @@
 <div class="card">
-It takes a team effort to focus on the mission of Phi Kappa Tau, and parents are invited to become actively involved in the Phi Tau family as Fraternity volunteers.
+  <p>It takes a team effort to focus on the mission of Phi Kappa Tau, and parents are invited to become actively involved in the Phi Tau family as Fraternity volunteers.</p>
 
-Board of Governors
+  <h2 style="color: #000000; text-align: center;">Board of Governors</h2>
 
-The Board of Governors (BOG) is the advisory board that works with and oversees the day to day operations and direction of a specific chapter. Each BOG has a Chairman and a number of different advisor positions.
+  <p>The Board of Governors (BOG) is the advisory board that works with and oversees the day to day operations and direction of a specific chapter. Each BOG has a Chairman and a number of different advisor positions.</p>
 
-House Corporation
+  <h2 style="color: #000000; text-align: center;">House Corporation</h2>
 
-The House Corporation is the entity that manages and oversees all aspects (maintenance, renovation, food service, financial planning) of a chapter house structure. The House Corporation works closely with the BOG and the resident council members.
+  <p>The House Corporation is the entity that manages and oversees all aspects (maintenance, renovation, food service, financial planning) of a chapter house structure. The House Corporation works closely with the BOG and the resident council members.</p>
 
-Parent Clubs
+  <h2 style="color: #000000; text-align: center;">Parent Clubs</h2>
 
-Join other parents in support of Phi Kappa Tau undergraduate members. Help create fundraising, philanthropic, and community service events.
+  <p>Join other parents in support of Phi Kappa Tau undergraduate members. Help create fundraising, philanthropic, and community service events.</p>
 </div>
