--- a/app/views/static_pages/parents_fund.html
+++ b/app/views/static_pages/parents_fund.html
@@ -1,19 +1,21 @@
 <div class="card">
-The vision of the Phi Kappa Tau Foundation is to secure the necessary resources to develop and support men who:
+    <h2 style="color: #000000; text-align: center;">The vision of the Phi Kappa Tau Foundation is to secure the necessary resources to develop and support men who</h2>
 
-Demonstrate unwavering character
-Embrace responsibility
-Exhibit ethical values
-Serve mankind
-Effect positive change
-Currently, the Foundation distributes more than $350,000 each year to support Phi Kappa Tau. Your gift to the Parents Fund will go towards: educational- and character-building programs such as Building Men of Character Retreats, sponsorships for development opportunities such as Leadership Academy, travel stipends for service at Hole in the Wall Camps, and academic scholarships for undergraduate and graduate students.
+    <ul>
+        <li style=" font-size: 14px; margin-left: 20px; list-style-type: circle;"><p>Demonstrate unwavering character</p></li>
+        <li style=" font-size: 14px; margin-left: 20px; list-style-type: circle;"><p>Embrace responsibility</p></li>
+        <li style=" font-size: 14px; margin-left: 20px; list-style-type: circle;"><p>Exhibit ethical values</p></li>
+        <li style=" font-size: 14px; margin-left: 20px; list-style-type: circle;"><p>Serve mankind</p></li>
+        <li style=" font-size: 14px; margin-left: 20px; list-style-type: circle;"><p>Effect positive change</p></li>
+    </ul>
+    <p>Currently, the Foundation distributes more than $350,000 each year to support Phi Kappa Tau. Your gift to the Parents Fund will go towards: educational- and character-building programs such as Building Men of Character Retreats, sponsorships for development opportunities such as Leadership Academy, travel stipends for service at Hole in the Wall Camps, and academic scholarships for undergraduate and graduate students.</p>
 
-With one simple gesture you can make an enormous impact by providing outstanding educational and leadership opportunities for your son and other students. Your gift to the Parents Fund supports programs that make a difference to Phi Kappa Tau.
+    <p>With one simple gesture you can make an enormous impact by providing outstanding educational and leadership opportunities for your son and other students. Your gift to the Parents Fund supports programs that make a difference to Phi Kappa Tau.</p>
 
-There are three easy ways to make a gift. In all cases, please designate your gift for the Parents Fund:
+    <p>There are three easy ways to make a gift. In all cases, please designate your gift for the Parents Fund:</p>
 
-Online using a credit card
-Calling and giving your credit card information — 1-800-PKT-1906 x224
-Mailing a check to the Foundation—Angie Van Winkle, Phi Kappa Tau Foundation, 5221 Morning Sun Road, Oxford, OH 45056
-The Internal Revenue Service recognizes the Phi Kappa Tau Foundation as a 501c(3) charitable organization and gifts are tax-deductible to the extent the law allows.
+    <p>Online using a credit card</p>
+    <p>Calling and giving your credit card information — 1-800-PKT-1906 x224</p>
+    <p>Mailing a check to the Foundation—Angie Van Winkle, Phi Kappa Tau Foundation, 5221 Morning Sun Road, Oxford, OH 45056</p>
+    <p>The Internal Revenue Service recognizes the Phi Kappa Tau Foundation as a 501c(3) charitable organization and gifts are tax-deductible to the extent the law allows.</p>
 </div>
