added news letters to top of the script

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,6 +14,7 @@
         <li><%= link_to "Students", information_for_students_path, class: "nav-item" %></li>
         <li><%= link_to "Parents", information_for_parents_path, class: "nav-item" %></li>
         <li><%= link_to "FAQ", faq_path, class: "nav-item" %></li>
+        <li><%= link_to "News-Letters", alumni_news_letters_path, class: "nav-item" %></li>
         <li><%= link_to "Contact", contact_us_path, class: "nav-item" %></li>
       <% else %>
         <li><%= link_to "Home", root_path, class: "nav-item" %></li>
