--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -19,6 +19,8 @@
             <li><h2 style="color: #00A000">Reaching Out</h2></li>
             <li><%= link_to "Contact Us", contact_us_path, class: "nav-item", :style=>'color:#FFF;' %></li>
             <li><%= link_to "Alumni News Letters", alumni_news_letters_path, class: "nav-item", :style=>'color:#FFF;' %></li>
+            <li><%= link_to "Students", information_for_students_path, class: "nav-item", :style=>'color:#FFF';%></li>
+            <li><%= link_to "Parents", information_for_parents_path, class: "nav-item", :style=>'color:#FFF;' %></li>
           </ul>
         </li>
         <li>
