updated alumni news letter page

--- a/app/views/alumni_news_letters/show.html.erb
+++ b/app/views/alumni_news_letters/show.html.erb
@@ -1,14 +1,8 @@
+<body style="background-color: #e8ad2e">
 <p id="notice"><%= notice %></p>
+<div class="card">
+<%= @alumni_news_letter.news_letter_html.html_safe %>
+  </div>
 
-<p>
-  <strong>Released date:</strong>
-  <%= @alumni_news_letter.released_date %>
-</p>
-
-<p>
-  <strong>Alumni new letter pdf:</strong>
-  <%= @alumni_news_letter.alumni_new_letter_pdf %>
-</p>
-
-<%= link_to 'Edit', edit_alumni_news_letter_path(@alumni_news_letter) %> |
 <%= link_to 'Back', alumni_news_letters_path %>
+</body>
