--- a/app/views/alumni_news_letters/index.html.erb
+++ b/app/views/alumni_news_letters/index.html.erb
@@ -1,7 +1,12 @@
 <body style="background-color: #e8ad2e">
 <h1 style="text-align: center">Alumni News Letters</h1>
+
 <div class="card">
-<% @alumni_news_letters.reverse_each do |alumni_news_letter| %>
+  <h2 style="color: #000000; text-align: center">Past NewsLetters</h2>
+  <% @alumni_news_letters.reverse_each do |alumni_news_letter| %>
+      <p style="text-align: center"><%= link_to alumni_news_letter.released_date.strftime("%B %Y"), alumni_news_letter, class: "nav-item"%></p>
+<% end %>
+  <% @alumni_news_letters.reverse_each do |alumni_news_letter| %>
   <%= alumni_news_letter.news_letter_html.html_safe %>
 <% end %>
 </div>
