--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,15 +9,14 @@
 <% end %>
 
 <div class="card">
-  <h1 style="text-align:center; text-decoration: underline;">50th Anniversary!</h1>
+  <h1 style="text-align:center; text-decoration: underline;">$50,000 For 50 Years Fundraiser!</h1>
   <div style="float: left; width: 40%">
-    <img src="https://www.rit.edu/alumni/news/story/PHT.jpg"></src>
+    <img src="http://i.imgur.com/3Nvx0Q6.jpg">
   </div>
   <div style="float: right; width: 60%; padding-left: 20px;">
-    <h2 style="color: #000000">Stop, Grab your calendar, and Save April 2nd 2016.</h2>
-
-    <p>We are excited to be announcing our 50th Anniversy and are hoping to see you there!&nbsp;</p>
-
+    <p>Brothers –</p>
+    <p>50 Years. A golden anniversary. A milestone worthy of celebration.</p>
+    <p>Let that number to sink in for a minute. Think about what that means - for an organization, an institution, to celebrate 50 years?</p>
     <p>For more information about the 50th <%= link_to "click here!", gamma_nu_50th_anniversary_path %></p>
   </div>
   <div style="float: none; clear:both;"> </div>
