--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Post', new_post_path, 'data-no-turbolink' => true  %>
+<%= link_to 'New Post', new_post_path, "data-no-turbolink" => true  %>
