--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,8 @@
   </div>
 <% end %>
 
-<div class="card">
+
+<!--<div class="card">
   <h1 style="text-align:center; text-decoration: underline;">$50,000 For 50 Years Fundraiser!</h1>
   <div style="float: left; width: 40%">
     <img src="http://i.imgur.com/3Nvx0Q6.jpg">
@@ -20,7 +21,7 @@
     <p>For more information about the 50th <%= link_to "click here!", gamma_nu_50th_anniversary_path %></p>
   </div>
   <div style="float: none; clear:both;"> </div>
-</div>
+</div>-->
 
 <br>
 
