--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,32 +1,29 @@
-<h2 style="">Sign up</h2>
-
+<div class="card_registration">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
+  <div class="registration_space">
+    <%= f.text_field :first_name, autocomplete: "off", :placeholder => "First Name" %>
+    <%= f.text_field :last_name, autocomplete: "off", :placeholder => "Last Name" %>
+  </div>
+  <div style="float: none; clear:both;"> </div>
 
-  <div style="float: left; margin-left: 25%"><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+  <div class="registration_space">
+    <%= f.password_field :password, autocomplete: "off", :placeholder => "Password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => "Password Confirmation" %>
+  </div>
+  <div style="float: none; clear:both;"> </div>
 
-  <div style="float: left; margin-left: 2%"><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
-
-  <div style="float: right; margin-right: 22%"><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
-
-    <div style="float: none; clear:both;"> </div>
-  <div style="float: left; margin-left: 25%"><%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autocomplete: "off" %></div>
-
-  <div style="float: left; margin-left: 2%"><%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autocomplete: "off" %></div>
-  <div style="float: right; margin-right: 22%"><%= f.label :pledge_class %><br />
-    <%= f.text_field :pledge_class, autocomplete: "off" %></div>
-
-    <div style="float: none; clear:both;"> </div>
+  <div class="registration_space">
+    <%= f.email_field :email, autofocus: true, :placeholder => "Email" %>
+    <%= f.text_field :pledge_class, autocomplete: "off", :placeholder => "Pledge Class" %>
+  </div>
+  <div style="float: none; clear:both;"> </div>
 
   <br>
-    <div style="width: 19%; margin: 0 auto;"><%= recaptcha_tags %></div>
+    <div class="registration_space"><%= recaptcha_tags %></div>
   <br>
 
-  <div style="margin: 0 auto; width: 20em;"><%= f.submit "Sign up" %></div>
+  <center><%= f.submit "Sign up" %></center>
 <% end %>
+</div>
 
