--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,49 +1,53 @@
-<div class="navbar" style="background-color: #5E0000">
-
-  <div class = "container">
-<header role="banner">
-  <div class="container" role="navigation">
-    <div class="brand selected">
-      <a  style="color: #FFF;" href="/">
-        <img alt="Phi Kappa Tau" src="http://pktphichapter.org/wp-content/themes/PKTphichapter-201208/images/branding2012-crest.png">
-        Phi Kappa Tau
-      </a>
-      <p style="margin-top: -15px; font-size: 1.7rem; color: #FFF ">Learning Leading Serving</p>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<nav class="navbar navbar-default" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <div class="header_img">
+        <div>
+          <a class="navbar-brand" href="/">
+            <img src="http://pktphichapter.org/wp-content/themes/PKTphichapter-201208/images/branding2012-crest.png">
+          </a>
+        </div>
+      </div>
+      <div class="phi_tau_text">
+        <h1 class="h1-header">Phi Kappa Tau</h1>
+        <h3 class="h3-header">Learning Leading Serving</h3>
+      </div>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
     </div>
 
-    <button class = "navbar-toggle" data-toggle = "collapse" data-target = ".navHeaderCollapse">
-      <span class = "icon-bar"></span>
-      <span class = "icon-bar"></span>
-      <span class = "icon-bar"></span>
-    </button>
-
-    <div class="collapse navbar-collapse ">
-    <ul class="nav-links nav navbar-nav">
-      <% if current_user == nil or current_user.role == nil or current_user.role == "not_a_member"%>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <% if current_user == nil or current_user.role == nil or current_user.role == "not_a_member"%>
           <li><%= link_to "Home", root_path, class: "nav-item" %></li>
           <li><%= link_to "About", about_path, class: "nav-item" %></li>
           <li><%= link_to "FAQ", faq_path, class: "nav-item" %></li>
           <li><%= link_to "Contact", contact_us_path, class: "nav-item" %></li>
           <li><%= link_to "News-Letters", alumni_news_letters_path, class: "nav-item" %></li>
-      <% else %>
+        <% else %>
           <li><%= link_to "Home", root_path, class: "nav-item" %></li>
           <% if current_user.role == "writer" or current_user.role == "admin" %>
-              <li><%= link_to "Posts", posts_path, class: "nav-item" %></li>
-              <li><%= link_to "News-Letters", new_alumni_news_letter_path, class: "nav-item" %></li>
+            <li><%= link_to "Posts", posts_path, class: "nav-item" %></li>
+            <li><%= link_to "News-Letters", new_alumni_news_letter_path, class: "nav-item" %></li>
           <% end %>
           <li><%=  link_to "Account", current_user, class: "nav-item"  %></li>
-      <% end %>
-      <% if user_signed_in?%>
+        <% end %>
+        <% if user_signed_in?%>
           <li><%= link_to "Sign-out", destroy_user_session_path, :method => :delete, class: "nav-item" %></li>
-      <% else %>
+        <% else %>
           <li><a class="nav-item" href="#openModal">Sign-In</a></li>
-      <% end %>
-    </ul>
-    </div>
-  </div>
-</header>
-</div>
-  </div>
+        <% end %>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 
 <div id="openModal" class="modalDialog">
   <div style="margin-left: auto; margin-right: auto;">
