--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-bottom" id="footer">
+<nav class="navbar navbar-bottom wrap" id="footer">
   <div class="container">
     <div class="row">
       <div class="col-sm-4">
@@ -8,7 +8,7 @@
         <a href="https://www.facebook.com/RITPhiTau" style="margin-left: 41px">
           <img src="http://www.nationalbeautyinstitute.com/images/facebook.png" style="width:60px;height:60px;">
         </a>
-        <a href="https://twitter.com/gnpkt" style="margin-left: 15px">
+        <a href="https://twitter.com/RITPKT" style="margin-left: 15px">
           <img src="http://www.doctordigital.com.ar/main/images/twitter-logo-white.png" style="width:60px;height:60px;">
         </a>
       </div>
