--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,8 +2,8 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
   <div class="registration_space">
-    <%= f.text_field :first_name, autocomplete: "off", :placeholder => "First Name" %>
-    <%= f.text_field :last_name, autocomplete: "off", :placeholder => "Last Name" %>
+    <%= f.text_field :first_name, autofocus: true, :placeholder => "First Name" %>
+    <%= f.text_field :last_name, :placeholder => "Last Name" %>
   </div>
   <div style="float: none; clear:both;"> </div>
 
@@ -14,7 +14,7 @@
   <div style="float: none; clear:both;"> </div>
 
   <div class="registration_space">
-    <%= f.email_field :email, autofocus: true, :placeholder => "Email" %>
+    <%= f.email_field :email,  :placeholder => "Email" %>
     <%= f.text_field :pledge_class, autocomplete: "off", :placeholder => "Pledge Class" %>
   </div>
   <div style="float: none; clear:both;"> </div>
