almost finished header / footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,4 @@
-<nav class="navbar navbar-bottom wrap" id="footer">
-  <div class="container">
+<footer class="footer">
     <div class="row">
       <div class="col-sm-4">
         <a class="logo selected" href="/">
@@ -50,5 +49,4 @@
         </ul>
       </div>
     </div>
-  </div>
-</nav>
+</footer>
