--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,6 @@
 $HarvardRed: #5e0000;
 $White: #FFFFFF;
+$FooterBackground: #161817;
 $H1_header: 3rem;
 $H3_header: 1.7rem;
 $screen-xs-min: 300px;
@@ -73,31 +74,45 @@ a:hover{
   background-color: transparent !important;
 }
 .navbar-bottom {
-  min-height: 150px;
-  margin-top: 50px;
+  min-height: 2rem;
   background-color: #161817;
-  padding-top: 1rem;
+  padding-top: 0rem;
   padding-bottom: 1rem;
-  color: $White;
-}
-#footer{
-  position: absolute;
-  width: 100%;
-  margin-bottom: 0px;
 }
 
-.wrap {
-  min-height: 7.2%;
-  height: auto;
-  margin: 0 auto -40px;
-  padding: 0 0 68px;
+.footer{
+  background-color: $FooterBackground;
 }
 //End of the footer
-
-html,body{
-  height: 100%
+//Home Page
+.post_img{
+  width: 40%;
+  float: left;
+  height: auto;
 }
+
+.post_text{
+  float: right;
+  width: 60%;
+  padding-left: 20px;
+}
+
+.post_header{
+  text-align:center;
+  text-decoration: underline;
+}
+
+.clear{
+  float: none;
+  clear:both;
+}
+//
 //text alignment
+
+body {
+  min-height: 100%;
+}
+
 .navbar-right {
   float: right !important;
   display: inline-block;
@@ -112,16 +127,7 @@ html,body{
   user-select:none;
   animation:fly-in-from-left .5s 1s ease both;
   transform-origin:top left;
-  width: 70%;
   margin: 0 auto;
-}
-
-.body-container {
-  max-width: 134rem;
-  width: 100%;
-  zoom: 1;
-  margin: 0px auto;
-  padding: 3rem 5rem;
 }
 
 hr {
