--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,18 +2,23 @@
 <html>
 <head>
   <title>Phi Tau Gamma Nu</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<%= render 'layouts/header' %>
 <body>
-<div class="body-container">
+  <%= render 'layouts/header' %>
+
   <% flash.each do |key, value| %>
-      <div class="alert alert-<%= key %>"><%= value %></div>
+    <div class="alert alert-<%= key %>"><%= value %></div>
   <% end %>
+
   <%= yield %>
-</div>
+
+  <%= render 'layouts/footer' %>
+
 </body>
-<%= render 'layouts/footer' %>
 </html>
+
+
+<script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
