--- a/app/views/alumni_news_letters/show.html.erb
+++ b/app/views/alumni_news_letters/show.html.erb
@@ -1,6 +1,6 @@
 <body style="background-color: #e8ad2e">
 <p id="notice"><%= notice %></p>
-<div class="card">
+<div class="card col-md-8 col-md-offset-2">
 <%= @alumni_news_letter.news_letter_html.html_safe %>
   </div>
 
