--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="col-md-8 col-md-offset-2 card ">
 <h2>Our Mission</h2>
 
 <p>The mission of Phi Kappa Tau is to champion a lifelong commitment to brotherhood, learning, ethical leadership and
