--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -1,5 +1,5 @@
 <body>
-<div class="accordion">
+<div class="accordion col-md-8 col-md-offset-2">
   <span class="target-fix" id="accordion"></span>
   <div>
     <span class="target-fix" id="accordion1"></span>
