--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
-<div class="card">
+<div class="card col-md-6 col-md-offset-3">
   <h1 style="text-align:center; text-decoration: underline;">Your Info</h1>
-    <div style="float: left; width: 50%">
-      <%= image_tag @user.profile_picture if @user.profile_picture? %>
+    <div class="user_img">
+      <%= image_tag @user.profile_picture, :class => "user_img" if @user.profile_picture? %>
       <%= form_for current_user, url: {action: "update"} do |f| %>
       <div class="field">
         <%= f.file_field :profile_picture %>
@@ -15,7 +15,7 @@
       <div class="field">
       </div>
     </div>
-  <div style="float: right; width: 50%; padding-left: 20px;">
+  <div class="user_info">
     <%= form_for current_user, url: {action: "update"} do |f| %>
         <%= f.text_field :first_name, :placeholder => "First Name" %>
         <%= f.text_field :last_name, :placeholder => "Last Name" %>
